Fix horizonal padding in table cells - it improves readability of "dense" tables.
git-svn-id: http://scm.sipfoundry.org/rep/sipX/main@6571 a612230a-c5fa-0310-af8b-88eea846685b

--- a/sipXconfig/web/context/css/layout.css
+++ b/sipXconfig/web/context/css/layout.css
@@ -274,7 +274,7 @@ table.component thead tr th
 	border-width:1px;
 	border-style: solid;
 	white-space:nowrap;
-	padding:3px;
+	padding:3px 5px;
 }
 
 table.component th a
@@ -286,8 +286,7 @@ table.component tbody tr td
 {
 	white-space:nowrap;
 	border-collapse:collapse;
-	padding-bottom:3px;
-	padding-top:3px;
+	padding:3px 5px;
 }
 
 table.component tfoot tr td
